arm64: Enable support for __int128 on Clang
Signed-off-by: Nathan Chancellor <natechancellor@gmail.com>

--- a/arch/arm64/Makefile
+++ b/arch/arm64/Makefile
@@ -33,6 +33,7 @@ endif
 ifeq ($(cc-name),clang)
 # This is a workaround for https://bugs.llvm.org/show_bug.cgi?id=30792.
 # TODO: revert when this is fixed in LLVM.
+KBUILD_CFLAGS	+= -DCONFIG_ARCH_SUPPORTS_INT128
 KBUILD_CFLAGS	+= $(call clang-ifversion, -ge, 0600, -mgeneral-regs-only, -mno-implicit-float)
 else
 KBUILD_CFLAGS	+= -mgeneral-regs-only
